# ChangeLog for app-text/gv
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/gv/ChangeLog,v 1.75 2007/11/18 20:45:11 genstef Exp $

  18 Nov 2007; Stefan Schweizer <genstef@gentoo.org>
  -files/gv-3.6.1-fixedmedia.patch, -files/gv-30_config.patch,
  -files/gv-update.patch, -gv-3.6.2-r1.ebuild:
  old

  18 Oct 2007; Christoph Mende <angelos@gentoo.org> gv-3.6.3.ebuild:
  Stable on amd64 wrt bug #187109

  11 Oct 2007; Lars Weiler <pylon@gentoo.org> gv-3.6.3.ebuild:
  stable ppc, bug #187109

  11 Oct 2007; Raúl Porcel <armin76@gentoo.org> gv-3.6.3.ebuild:
  alpha/sparc stable wrt #187109

  11 Oct 2007; Dawid Węgliński <cla@gentoo.org> gv-3.6.3.ebuild:
  Stable on x86 (bug #187109)

  11 Oct 2007; Markus Rothe <corsair@gentoo.org> gv-3.6.3.ebuild:
  Stable on ppc64; bug #187109

  11 Oct 2007; Jeroen Roovers <jer@gentoo.org> gv-3.6.3.ebuild:
  Stable for HPPA (bug #187109).

  22 Jul 2007; David Shakaryan <omp@gentoo.org> gv-3.6.2-r1.ebuild,
  gv-3.6.3.ebuild:
  Remove virtual/x11 from dependencies.

*gv-3.6.3 (04 Jul 2007)

  04 Jul 2007; Stefan Schweizer <genstef@gentoo.org> +gv-3.6.3.ebuild:
  version bump thanks to Charles Clement <caratorn@gmail.com> in bug 184019

  07 Apr 2007; Stefan Schweizer <genstef@gentoo.org>
  +files/gv-30_config.patch, gv-3.6.2-r1.ebuild:
  Make gv read its config, bug 158322

  07 Apr 2007; Stefan Schweizer <genstef@gentoo.org> gv-3.6.2-r1.ebuild:
  Add menu entry thanks to Pacho Ramos <pacho@condmat1.ciencias.uniovi.es> in
  bug 160218

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org> gv-3.6.2-r1.ebuild:
  SRC_URI reverted to mirror://, fixes bug 163183

  19 Feb 2007; <genstef@gentoo.org> -files/gv-3.6.1-landscape.patch,
  -gv-3.6.1-r3.ebuild, -gv-3.6.1-r5.ebuild, -gv-3.6.2.ebuild:
  security cleanup bug 164200

  11 Feb 2007; Fabian Groffen <grobian@gentoo.org> gv-3.6.1-r3.ebuild,
  gv-3.6.1-r5.ebuild, gv-3.6.2.ebuild, gv-3.6.2-r1.ebuild: