@@ -1,6 +1,11 @@
 # ChangeLog for app-text/gv
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gv/ChangeLog,v 1.75 2007/11/18 20:45:11 genstef Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/gv/ChangeLog,v 1.76 2008/06/21 07:29:23 drac Exp $
+
+*gv-3.6.4 (21 Jun 2008)
+
+  21 Jun 2008; Samuli Suominen <drac@gentoo.org> +gv-3.6.4.ebuild:
+  Version bump.
 
   18 Nov 2007; Stefan Schweizer <genstef@gentoo.org>
   -files/gv-3.6.1-fixedmedia.patch, -files/gv-30_config.patch,
